fix spacing-unit

--- a/_sass/minima/_layout.scss
+++ b/_sass/minima/_layout.scss
@@ -4,7 +4,7 @@
 .site-header {
   border-top: 5px solid $grey-color-dark;
   border-bottom: 1px solid $grey-color-light;
-  min-height: calc($spacing-unit * 1.865);
+  min-height: calc(#{$spacing-unit} * 1.865);
 
   // Positioning context for the mobile navigation icon
   position: relative;
@@ -53,7 +53,7 @@
   @include media-query($on-palm) {
     position: absolute;
     top: 9px;
-    right: calc($spacing-unit / 2);
+    right: calc(#{$spacing-unit} / 2);
     background-color: $background-color;
     border: 1px solid $grey-color-light;
     border-radius: 5px;
@@ -116,7 +116,7 @@
 
 .footer-heading {
   @include relative-font-size(1.125);
-  margin-bottom: calc($spacing-unit / 2);
+  margin-bottom: calc(#{$spacing-unit} / 2);
 }
 
 .contact-list,
@@ -128,14 +128,14 @@
 .footer-col-wrapper {
   @include relative-font-size(0.9375);
   color: $grey-color;
-  margin-left: calc($spacing-unit / -2);
+  margin-left: calc(#{$spacing-unit} / -2);
   @extend %clearfix;
 }
 
 .footer-col {
   float: left;
-  margin-bottom: calc($spacing-unit / 2);
-  padding-left: calc($spacing-unit / 2);
+  margin-bottom: calc(#{$spacing-unit} / 2);
+  padding-left: calc(#{$spacing-unit} / 2);
 }
 
 .footer-col-1 {
@@ -180,7 +180,7 @@
  * Page content
  */
 .page-content {
-  padding: calc($spacing-unit / 2) 0;
+  padding: calc(#{$spacing-unit} / 2) 0;
   flex: 1 0 auto;
   padding-bottom: 0;
 }
